2004-09-15  Dalibor Topic  <robilad@kaffe.org>

        * libraries/javalib/logging.properties:
	New file. Taken from GNU Classpath.

        * libraries/javalib/Makefile.am.in:
	(jrelib_DATA) Added logging.properties.

        * libraries/javalib/Makefile.am,
        libraries/javalib/Makefile.in:
	Regenerated.

2004-09-15  Guilhem Lavaux  <guilhem@kaffe.org>

	* libraries/javalib/java/net/ServerSocket.java
	(implAccept): Set bound to true.

	* libraries/javalib/java/net/Socket.java
	(bound): Make bound package-private.

	Patch from: Ito Kazumitsu  <kaz@maczuka.gcd.org>
	
	* libraries/clib/net/PlainSocketImpl.c
	(socketAccept): Init localport.
	(socketBind): Fixed localport reporting when using IPV6.
	(socketSetOption): Fixed some warnings.
	(socketGetOption): Fixed some warnings.
	Use *_ADDRESS_SIZE instead of raw values.
	
2004-09-14  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/naming/CompoundName.java:
	Resynced with GNU Classpath.

	2004-09-12  Tom Tromey  <tromey@redhat.com>

        * javax/naming/CompoundName.java (CompoundName): Don't check for
        separator in "flat" case.

2004-09-14  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/Makefile.am.in
	Only build gmp math when native libs are 
	built, too.

	* libraries/javalib/Makefile.am,
	libraries/javalib/Makefile.in:
	Regenerated.

	Reported by: Kiyo Inaba <inaba@src.ricoh.co.jp>

2004-09-14  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/Makefile.am.in
	(KAFFELIBRARYPATH) Add security library.

	* libraries/javalib/Makefile.am,
	libraries/javalib/Makefile.in:
	Regenerated.

	Reported by: Ito Kazumitsu  <kaz@maczuka.gcd.org>

2004-09-14  Michael Franz <mvfranz@gmail.com>

	* kaffe/kaffevm/jit3/funcs.h:
        Rewritten to only define the functions that are
        actually used.

2004-09-14  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* libraries/javalib/java/net/Socket.java
	(getLocalAddress()): If the socket is not bound yet,